--- a/.github/workflows/dev-stats.yml
+++ b/.github/workflows/dev-stats.yml
@@ -3,7 +3,7 @@ name: Profile Readme Development Stats
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: '* * * * *'
 
 jobs:
   update-readme:
