--- a/.github/workflows/dev-stats.yml
+++ b/.github/workflows/dev-stats.yml
@@ -3,7 +3,7 @@ name: Profile Readme Development Stats
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '* * * * *'
+    - cron: '* * * * *' #0 10 * * *
 
 jobs:
   update-readme:
@@ -15,6 +15,8 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_SHORT_INFO: FALSE
-          SHOW_PROFILE_VIEWS: FALSE 
+          SHOW_PROFILE_VIEWS: FALSE
           SHOW_LOC_CHART:  FALSE
-          SHOW_PROJECTS:  FALSE
+          SHOW_PROJECTS:  TRUE
+          SHOW_LINES_OF_CODE: TRUE
+          SHOW_EDITORS: FALSE
