--- a/.github/workflows/dev-stats.yml
+++ b/.github/workflows/dev-stats.yml
@@ -3,7 +3,7 @@ name: Profile Readme Development Stats
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '* * * * *' #0 10 * * *
+    - cron: '0 10 * * *'
 
 jobs:
   update-readme:
