--- a/.github/workflows/dev-stats.yml
+++ b/.github/workflows/dev-stats.yml
@@ -18,5 +18,5 @@ jobs:
           SHOW_PROFILE_VIEWS: FALSE
           SHOW_LOC_CHART:  FALSE
           SHOW_PROJECTS:  TRUE
-          SHOW_LINES_OF_CODE: TRUE
+          SHOW_LINES_OF_CODE: FALSE
           SHOW_EDITORS: FALSE
